--- a/Assets/sass/style.scss
+++ b/Assets/sass/style.scss
@@ -48,7 +48,14 @@ main{
     &__button{
       background-color:hsl(183, 100%, 15%) ;
       border: none;
-      color: white;
+      color: $white;
+      transition: 0.25s;
+      outline: none;
+    }
+
+    &__button.active{
+      background-color: hsl(172, 67%, 45%);
+      color: $input-text;
     }
   }
 }
