--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,6 +7,15 @@ Variables
 }
 
 /*
+Color del placeholder
+*/
+::placeholder {
+  color: hsl(184deg, 14%, 56%);
+  font-weight: 700;
+  margin-right: 0.8rem;
+}
+
+/*
 Estilos pantalla pequeña
 */
 body {
@@ -17,55 +26,133 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 20vh;
 }
 .header__imagen {
-  width: 25%;
-  height: 50px;
-  padding: 3rem;
+  width: 35%;
+  height: 57px;
 }
 
-main {
+.main {
   background-color: hsl(0deg, 0%, 100%);
-  border-radius: 1rem;
-  padding: 1rem;
+  border-radius: 1rem 1rem 0 0;
+  padding: 0.5rem 0 1.75rem;
 }
 
-.form__box__imagen {
-  position: relative;
-  left: 5%;
-  width: 3%;
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1.4rem;
 }
-.form__btns__button {
+.form__box__inputs {
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: hsl(189deg, 41%, 97%);
+  padding: 0.3rem 1rem;
+  border-radius: 0.8rem;
+  margin-bottom: 5%;
+}
+.form__box__imagen {
+  width: 4%;
+}
+.form__box__label {
+  font-weight: 700;
+  font-size: 1.2rem;
+  color: hsl(186deg, 14%, 43%);
+}
+.form__box__input {
+  outline: none;
+  border: none;
+  background-color: hsl(189deg, 41%, 97%);
+  height: 2.4rem;
+  text-align: right;
+  font-size: 2rem;
+  color: hsl(183deg, 100%, 15%);
+  font-weight: 700;
+  width: 90%;
+}
+.form__box__btns {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 6%;
+}
+.form__box__btns__button {
   background-color: hsl(183deg, 100%, 15%);
   border: none;
   color: hsl(0deg, 0%, 100%);
   transition: 0.25s;
   outline: none;
+  width: 48%;
+  border-radius: 5px;
+  padding: 10px;
+  font-weight: 700;
+  font-size: 1.5rem;
+  padding: 0.7rem 0;
+  margin-right: 2%;
+  margin-top: 5%;
 }
-.form__btns__button.active {
-  background-color: hsl(172deg, 67%, 45%);
+.form__box__btns #custom-tip {
+  background-color: hsl(189deg, 41%, 97%);
+  text-align: right;
+}
+.form__box__btns__button.active {
+  background-color: hsl(172deg, 65%, 37%);
   color: hsl(183deg, 100%, 15%);
+}
+.form__box__btns__botton {
+  border: none;
+  outline: none;
+  background-color: hsl(189deg, 41%, 97%);
+  height: 2.4rem;
+  text-align: right;
+}
+.form__box__calculate {
+  background-color: hsl(172deg, 67%, 45%);
+  border: none;
+  padding: 0.4rem;
+  border-radius: 5px;
+  color: hsl(183deg, 100%, 15%);
+  font-weight: 700;
+  font-size: 1.5rem;
+  letter-spacing: 7px;
 }
 
 .result {
   background-color: hsl(183deg, 100%, 15%);
-  border-radius: 1rem;
-  padding: 2%;
+  border-radius: 0.8rem;
+  padding: 1.7rem;
 }
-.result__tip {
-  color: white;
+.result__box {
+  display: flex;
+  justify-content: space-between;
+}
+.result__title {
+  color: hsl(0deg, 0%, 100%);
+}
+.result span {
+  display: block;
+  color: hsl(184deg, 14%, 56%);
 }
 .result__total {
-  color: white;
+  color: hsl(172deg, 67%, 45%);
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 .result__btn {
-  width: 13rem;
-  padding: 0.5rem;
-  border-radius: 0.5rem;
-  position: relative;
-  left: 3rem;
   background-color: hsl(172deg, 67%, 45%);
   border: none;
+  font-weight: 700;
+  padding: 0.5rem;
+  letter-spacing: 1px;
+  border-radius: 0.3rem;
+  color: hsl(183deg, 100%, 15%);
+  width: 100%;
+  font-size: 1.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
