--- a/Assets/sass/style.scss
+++ b/Assets/sass/style.scss
@@ -5,9 +5,23 @@ $main-bg: hsl(185, 41%, 84%);
 $white: hsl(0, 0%, 100%);
 $input-bg: hsl(189, 41%, 97%);
 $input-text: hsl(183, 100%, 15%);
+$btn-bg: hsl(183, 100%, 15%); 
+$btn-active: hsl(172, 67%, 45%);
+$btn-active-hover: hsl(172, 65%, 37%);
+$btn-active-act: hsl(172, 64%, 31%);
+
 
 * {
   font-family: 'Space Mono', monospace;
+}
+
+/*
+Color del placeholder
+*/
+::placeholder{
+  color: hsl(184, 14%, 56%);
+  font-weight: 700;
+  margin-right: 0.8rem;
 }
  
 
@@ -23,61 +37,140 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 20vh;
   &__imagen{
-    width: 25%;
-    height: 50px;
-    padding: 3rem;
+    width: 35%;
+    height: 57px;
   }
 }
 
-main{
+.main{
   background-color: $white;
-  border-radius: 1rem;
-  padding: 1rem;
+  border-radius: 1rem 1rem 0 0;
+  padding: 0.5rem 0 1.75rem;
 }
 
 .form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1.4rem;
   &__box{
+   &__inputs{
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: $input-bg;
+    padding: 0.3rem 1rem;
+    border-radius: 0.8rem;
+    margin-bottom: 5%;
+   }
     &__imagen{
-      position: relative;
-      left: 5%;
-      width: 3%;
+      width: 4%;
     }
-  }
-  &__btns{
-    &__button{
-      background-color:hsl(183, 100%, 15%) ;
-      border: none;
-      color: $white;
-      transition: 0.25s;
+    &__label{
+      font-weight: 700;
+      font-size: 1.2rem;
+      color: hsl(186, 14%, 43%);
+      
+    }
+    &__input{
       outline: none;
-    }
-
-    &__button.active{
-      background-color: hsl(172, 67%, 45%);
+      border: none;
+      background-color: $input-bg;
+      height: 2.4rem;
+      text-align: right;
+      font-size: 2rem;
       color: $input-text;
+      font-weight: 700;
+      width: 90%;
+    }
+    &__btns{
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: 6%;
+
+      &__button{
+        background-color:$btn-bg ;
+        border: none;
+        color: $white;
+        transition: 0.25s;
+        outline: none;
+        width: 48%;
+        border-radius: 5px;
+        padding: 10px;
+        font-weight: 700;
+        font-size: 1.5rem;
+        padding: 0.7rem 0;
+        margin-right: 2%;
+        margin-top: 5%;
+      }
+
+      #custom-tip{
+        background-color: $input-bg;
+        text-align: right;
+      }
+  
+      &__button.active{
+        background-color: $btn-active-hover;
+        color: $input-text;
+      }
+      &__botton{
+        border: none;
+        outline: none;
+        background-color: $input-bg;
+        height: 2.4rem;
+        text-align: right;
+
+      }
+    }
+    &__calculate{
+      background-color: $btn-active;
+      border: none;
+      padding: 0.4rem;
+      border-radius: 5px;
+      color: $input-text;
+      font-weight: 700;
+      font-size: 1.5rem;
+      letter-spacing: 7px;
     }
   }
 }
 
 
 .result{
-  background-color: hsl(183, 100%, 15%);
-  border-radius: 1rem;
-  padding: 2%;
-  &__tip{
-    color: white;
+  background-color: $btn-bg;
+  border-radius: 0.8rem;
+  padding: 1.7rem;
+  &__box{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__title{
+   color: $white;
+  }
+  span{
+    display: block;
+    color: hsl(184, 14%, 56%);
   }
   &__total{
-    color: white;
+    color: $btn-active;
+    font-size: 1.5rem;
+    font-weight: 700;
   }
   &__btn{
-    width: 13rem;
-    padding: 0.5rem;
-    border-radius: 0.50rem;
-    position: relative;
-    left: 3rem;
-    background-color:hsl(172, 67%, 45%);
+    background-color: $btn-active;
     border: none;
+    font-weight: 700;
+    padding: 0.5rem;
+    letter-spacing: 1px;
+    border-radius: 0.3rem;
+    color: $input-text;
+    width: 100%;
+    font-size: 1.5rem;
   }
+  
 }
