--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -95,6 +95,7 @@ body {
   padding: 0.7rem 0;
   margin-right: 2%;
   margin-top: 5%;
+  cursor: pointer;
 }
 .form__box__btns #custom-tip {
   background-color: hsl(189deg, 41%, 97%);
@@ -157,13 +158,30 @@ body {
 
 @media screen and (min-width: 1440px) {
   body {
-    padding: 20%;
+    padding: 9%;
   }
   .main {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.8rem;
+    width: 100%;
+  }
+  .form__box {
+    width: 100%;
   }
   .header__imagen {
-    width: 30%;
+    width: 10%;
+  }
+  .result__first {
+    width: 30rem;
+    height: 24rem;
+    margin-bottom: 3rem;
+    padding: 1rem;
+  }
+  .result__total {
+    font-size: 2.5rem;
+    margin: 0%;
   }
 }
 
