--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -100,6 +100,8 @@ body {
 .form__box__btns #custom-tip {
   background-color: hsl(189deg, 41%, 97%);
   text-align: right;
+  color: hsl(183deg, 100%, 15%);
+  font-size: 2rem;
 }
 .form__box__btns__button.active {
   background-color: hsl(172deg, 65%, 37%);
