--- a/Assets/sass/style.scss
+++ b/Assets/sass/style.scss
@@ -23,7 +23,8 @@ Color del placeholder
   font-weight: 700;
   margin-right: 0.8rem;
 }
- 
+
+
 
 /*
 Estilos pantalla pequeña
@@ -201,7 +202,7 @@ body{
       width: 10%;
     }
   }
-
+  
   .result{
     &__first{
       width: 30rem;
@@ -216,3 +217,14 @@ body{
   }
   
 }
+
+ /*
+Clases de validacion
+ */
+.valid{
+border: orangered;
+ }
+      
+.invalid{
+  border: $btn-active;
+  }
