--- a/Assets/sass/style.scss
+++ b/Assets/sass/style.scss
@@ -221,10 +221,10 @@ body{
  /*
 Clases de validacion
  */
-.valid{
-border: orangered;
- }
-      
-.invalid{
-  border: $btn-active;
-  }
+ .valid {
+  border: 1px solid $btn-active;
+}
+
+.invalid {
+  border: 1px solid red;
+}
